--- a/restaurant_menu/src/restaurant_menu/FXMLDocument.fxml
+++ b/restaurant_menu/src/restaurant_menu/FXMLDocument.fxml
@@ -1,14 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="restaurant_menu.FXMLDocumentController">
-    <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
-    </children>
-</AnchorPane>
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="restaurant_menu.FXMLDocumentController">
+   <children>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <AnchorPane prefHeight="480.0" prefWidth="330.0" styleClass="white-form" stylesheets="@logiinDesign.css">
+               <children>
+                  <Label layoutX="50.0" layoutY="79.0" styleClass="head-label" stylesheets="@logiinDesign.css" text="Register Account" textFill="#278d5a">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="su_userName" layoutX="50.0" layoutY="125.0" prefHeight="30.0" prefWidth="220.0" promptText="User Name" />
+                  <PasswordField fx:id="su_password" layoutX="50.0" layoutY="171.0" prefHeight="30.0" prefWidth="220.0" promptText="Password" />
+                  <Button fx:id="su_signupBtn" layoutX="50.0" layoutY="302.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="220.0" styleClass="login-btn" stylesheets="@logiinDesign.css" text="Sign Up" />
+                  <ComboBox fx:id="su_question" layoutX="50.0" layoutY="214.0" prefHeight="30.0" prefWidth="220.0" promptText="Question" />
+                  <PasswordField fx:id="su_answer" layoutX="50.0" layoutY="258.0" prefHeight="30.0" prefWidth="220.0" promptText="Answer" />
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="326.0" prefHeight="480.0" prefWidth="330.0" styleClass="white-form" stylesheets="@logiinDesign.css">
+               <children>
+                  <Label layoutX="32.0" layoutY="126.0" styleClass="head-label" stylesheets="@logiinDesign.css" text="Login Account" textFill="#278d5a">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="si_username" layoutX="32.0" layoutY="172.0" prefHeight="30.0" prefWidth="220.0" promptText="User Name" />
+                  <PasswordField fx:id="si_password" layoutX="32.0" layoutY="220.0" prefHeight="30.0" prefWidth="220.0" promptText="Password" />
+                  <Button fx:id="si_loginBtn" layoutX="32.0" layoutY="283.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="220.0" styleClass="login-btn" stylesheets="@logiinDesign.css" text="Login" />
+                  <Hyperlink fx:id="si_forgot" layoutX="31.0" layoutY="253.0" text="Forgot Password?" />
+                  <Label layoutX="31.0" layoutY="86.0" text="Cafe Shop Management System" textFill="#278d5a">
+                     <font>
+                        <Font name="Calibri Bold" size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
+   </children>
+</StackPane>
