--- a/restaurant_menu/src/restaurant_menu/mainFormDesign.css
+++ b/restaurant_menu/src/restaurant_menu/mainFormDesign.css
@@ -3,11 +3,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to c
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to edit this template
 */
 /* 
-    Created on : Jan 27, 2025, 12:09:56 AM
+    Created on : Jan 31, 2025, 12:35:16 AM
     Author     : SHAKIL
 */
+
 .header{
-    -fx-background-color: ent(to bottom right, #098c53, #246861);
+    -fx-background-color:linear-gradient(to bottom right, #098c53, #246861);
 }
 .nav-form{
     -fx-background-color: linear-gradient(to bottom right, #0f6789, #286155);
